# 7guis

./: Cargo.toml  build_dev.sh  post_build.sh  run_dev.sh
.github/workflows/: deploy_cloudflare_release.yaml
sevenguis_cli/: Cargo.toml
sevenguis_cli/src/: main.rs
sevenguis_core/: Cargo.toml
sevenguis_core/src/: counter_page.rs  crud_page.rs  flight_page.rs  home_page.rs  lib.rs  temperature_page.rs  timer_page.rs
sevenguis_lib/: Cargo.toml
sevenguis_lib/src/: home_page.rs  lib.rs  temperature_page.rs  timer_page.rs
sevenguis_wasm/: Cargo.toml
sevenguis_wasm/src/: counter_page.rs  crud_page.rs  flight_page.rs  home_page.rs  lib.rs  temperature_page.rs  timer_page.rs
sevenguis_web/: package-lock.json  package.json  tailwind.config.js
sevenguis_web/src/: counter_page.ts  crud_page.ts  flight_page.ts  home_page.ts  temperature_page.ts  timer_page.ts
