[package]
name = "sevenguis_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sevenguis_core = { path = "../sevenguis_core" }
polyester = { path = "../../polyester-rs/polyester" }
serde_json = "1.0.81"