[package]
name = "sevenguis_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sevenguis_lib = { path = "../sevenguis_lib" }
polyester = { path = "../../polyester-rs/polyester" }
polyester_macro = { path = "../../polyester-rs/polyester_macro" }
serde = { version = "1.0.137", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }